# aoc25

./: README.md  pyproject.toml
days/01/: challenge.py  first_challenge.md  second_challenge.md
days/02/: challenge.py  first_challenge.md  second_challenge.md
days/03/: challenge.py  first_challenge.md  second_challenge.md
days/04/: challenge.py  first.md  second.md
days/04/input/: first
days/05/: challenge.py  first.md  second.md
days/06/: challenge.py  first.md  second.md
days/07/: challenge.py  first.md  second.md
days/08/: challenge.py  first.md  second.md
days/09/: challenge.py  first.md  second.md
days/10/: challenge.py  first.md  second.md
days/10/input/: first
days/11/: challenge.py  first.md  second.md
days/12/: challenge.py  first.md  second.md
