[project]
name = "aoc25"
version = "0.1.0"
description = ""
authors = [
    {name = "Christian Melching",email = "20678978+melching@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "scipy (>=1.16.3,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
